@@ -394,11 +394,10 @@ transparent. To do so, use the following option:
   means ``fully transparent'' or ``invisible.'' A value of |0.5|
   yields lines that are semitransparent.
 
-  Note that these options do not work if you use PostScript as your
-  output format. The reason is that PostScript does not support
-  transparency. However, transparency works nicely for \textsc{pdf}
-  and \textsc{svg}.
-  
+  Note that when you use PostScript as your output format,
+  this option works only with recent versions of GhostScript and
+  produces \emph{unportable PostScript code}. 
+   
 \begin{codeexample}[]
 \begin{tikzpicture}[line width=1ex]
   \draw (0,0) -- (3,1);
@@ -766,8 +765,9 @@ opacity:
   This option sets the opacity of fillings. In addition to filling
   operations, this opacity also applies to text and images.
 
-  Note, again, that this option does not work if you use PostScript as
-  your output format.
+  Note, again, that when you use PostScript as your output format,
+  this option works only with recent versions of GhostScript and
+  produces \emph{unportable PostScript code}. 
   
 \begin{codeexample}[]
 \begin{tikzpicture}[thick,fill opacity=0.5]
