@@ -2,7 +2,8 @@
 
 	CVS:
 
-	- Added transparency 
+	- Added transparency to PGF (quite nice)...
+	- Fixed problem with \\ in centered text.
 
 2005-09-08 Till Tantau <tantua@users.sourceforget.net>
 
